[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/Arrow.png" type="Texture" id=1]
[ext_resource path="res://ForceField.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="ForceField" type="Area2D"]
collision_layer = 576
collision_mask = 576
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StartPos" type="Position2D" parent="."]

[node name="EndPos" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )
[connection signal="body_entered" from="." to="." method="_on_ForceField_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ForceField_body_exited"]
